fix: various fixes (#1051)
* feat: prevent highlight on menu

* fix: sunday e6 should be unconvertible

* fix: mydei should not have atk% as a sim substat

* fix: hero set should only be defaulted on for remembrance

* feat: update hanya spd default and cap

* fix: right arrow broken on mac

* fix: anaxa to match glamoth

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -755,3 +755,7 @@ a {
 .buff-table .ant-table-thead {
     display: none;
 }
+
+.no-highlight {
+    user-select: none !important;
+}
